adding routes as well as friend data

--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -155,7 +155,7 @@
     <hr>
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/youngedre/friendfinder">GitHub Repo</a></p>
       </div>
     </footer>
 
@@ -169,7 +169,7 @@
         </div>
         <div class="modal-body">
           <h2 id="match-name"></h2>
-          <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+          <img id="match-img" src="https://via.placeholder.com/400x400" alt="">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -178,6 +178,48 @@
 
     </div>
   </div>
+  <script type="text/javascript">
+                $("#submit").on("click", function() {
+                        function validateForm() {
+                        var isValid = true;
+                        $(".form-control").each(function() {
+                        if ($(this).val() === "") isValid = false;
+                        });
+                        $(".chosen-select").each(function() {
+                        if ($(this).val() === "") isValid = false;
+                        });
+                        return isValid;
+                        }
+                        if (validateForm() == true) {
+                        var userData = {
+                        name: $("#name").val(),
+                        photo: $("#photo").val(),
+                        scores: [
+                                $("#q1").val(),
+                                $("#q2").val(),
+                                $("#q3").val(),
+                                $("#q4").val(),
+                                $("#q5").val(),
+                                $("#q6").val(),
+                                $("#q7").val(),
+                                $("#q8").val(),
+                                $("#q9").val(),
+                                $("#q10").val()
+                        ]
+                        };
+                        var currentURL = window.location.origin;
+                        $.post(currentURL + "/api/friends", userData, function(data) {
+                                console.log("posted")
+                        $("#match-name").text(data.name);
+                        $("#match-img").attr("src", data.photo);
+                        $("#results-modal").modal("show");
+                        });
+                        } else {
+                        alert("Please fill out all fields before submitting!");
+                        }
+                        return false;
+                        });
+                </script>
 
 
 </body>
