--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -25,7 +25,7 @@
     
     <footer class="footer">
         <div class="container">
-            <p><a href=#>API Friends List</a> | <a href="https://github.com/youngedre/friendFinder">GitHub Repo</a></p>
+            <p><a href=/api/friends>API Friends List</a> | <a href="https://github.com/youngedre/friendFinder">GitHub Repo</a></p>
         </div>
     </footer>
     
